2003-06-27  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_populate, window_switch_page_after_cb)
	(window_switch_page_cb): Hack to workaround weird selection
	problem with the book tree.

	* devhelp.keys.in: 
	* devhelp.desktop.in: Fix name.

	* src/dh-parser.c (parser_start_node_cb): Fix bug #113065, make
	messages more generic to help translators.

	* libegg/menu/egg-action.c: Patch to get translated menus.

	* libegg/menu/egg-menu-merge.c: Disable some debug output.

	* src/dh-window.c (window_activate_action): Apply a variant of the
	patch from bug #114849, by Steve Chaplin to fix the bug.

	* libegg/: Update eggmenu to fix bug #107390, follow toolbar/menu
	preferences.
	
2003-06-27  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_activate_action): Set the name to
	"Devhelp" instead of using PACKAGE.
	Use stock item for Help->About.

	* src/dh-html-gtkhtml2.c (html_reader_thread): Don't use g_strdup,
	use g_memdup and copy the number of bytes we actually read. Fixes
	read of uninitialized data.

	* misc/Makefile.am: Dist the files here.
	* Makefile.am (SUBDIRS): 
	* configure.in: Add misc directory.

	* src/dh-main.c (main): Add --geometry to options.

	* src/dh-window.c (window_populate): Set border widths, and use
	SHADOW_IN.
	(dh_window_new): Try to set a better default size and use
	--geometry if that is available.

	* src/dh-search.c (search_finalize): Chain up.
	(search_init): Set spacing.
	(dh_search_new): Set border width, shorten the search label.

2003-06-27  Richard Hult  <richard@imendio.com>

	* src/dh-search.c (dh_search_grab_focus): Add.

	* src/dh-window.c (window_init, window_key_press_event_cb): Make
	ctrl-l focus the search entry if that page is visible.
	
2003-06-24  Mikael Hallendal  <micke@imendio.com>

	* src/dh-parser.c: (dh_parse_file): 
	- Fixed memory leak found when playing with gnome-vfs module.

2003-06-13  Mikael Hallendal <micke@imendio.com>

        * *: Updated mine and Richard's contact info.
